# ngx-otel-rust

./: .dockerignore  .gitignore  CLAUDE.md  COMMENT_AUDIT_2026-06.md  Cargo.toml  LIFECYCLE.md  METRIC_MODEL.md  MIGRATING_FROM_NGINX_OTEL.md  Makefile  OPENSSL_SUPPORT.md  README.md  SPIKE_DEDICATED_WORKER.md  SPIKE_DUAL_ROLE_WORKER.md  TELEMETRY_MODEL.md  TLS_AND_CERT_METRICS_RESEARCH.md  build.rs  config  config.make  deny.toml  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yaml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPING.md
examples/: bidi_echo_server.rs
proto/echo/v1/: echo.proto
proto/opentelemetry/proto/collector/logs/v1/: logs_service.proto
proto/opentelemetry/proto/collector/trace/v1/: trace_service.proto
proto/opentelemetry/proto/logs/v1/: logs.proto
proto/opentelemetry/proto/trace/v1/: trace.proto
scripts/: bootstrap-layout.sh
semconv/: weaver.yaml
semconv/registry/: nginx-attrs.yaml  ngx_otel-attrs.yaml
src/: cert_table.rs  config.rs  lib.rs  liveness.rs  log.rs  shm.rs  util.rs
src/config/: directives.rs  mod.rs  parse.rs
src/data_model/: mod.rs
src/drain/: backoff.rs  graceful.rs  mod.rs  self_metrics.rs
src/encoder/: mod.rs
src/export/: mod.rs
src/exporter/: channel.rs  control_shm.rs  mod.rs
src/logs/: access.rs  coalesce.rs  error_writer.rs  mod.rs  ring.rs  severity.rs
src/metric_source/: instrumented.rs  location_conf.rs  mod.rs  span_start.rs  stub_status.rs  tls_cert.rs
src/processor/: mod.rs
src/shim/: mod.rs  ngx_otel_bitfield_shim.c  ngx_otel_ssl_shim.c
src/shm/: histogram.rs  mod.rs
src/traces/: ctx.rs  mod.rs
src/transport/: hyper_http.rs  mod.rs  sync_http.rs  tls.rs  tls_tests.rs
src/transport/grpc/: echo_proto.rs  executor.rs  mod.rs  shim.rs  smoke.rs  status_adapter.rs  transport.rs
test-harness/: README.md  docker-compose.yml  lib.sh  otel-collector-config.yaml
test-harness/demo/: README.md  docker-compose.demo.yml  nginx-demo.conf.template  otel-collector-demo.yaml  run-demo.sh
test-harness/demo/grafana/dashboards/: ngx-otel-rust-overview.json
test-harness/demo/grafana/provisioning/dashboards/: dashboards.yaml
test-harness/demo/grafana/provisioning/datasources/: datasources.yaml
test-harness/demo/prometheus/: prometheus.yml
test-harness/demo/tempo/: tempo.yaml
tests/: RESULTS-2026-06-09-phase3-consolidation.txt  RESULTS-2026-06-10-mutation-evidence.txt  RESULTS-2026-06-15-delivery-outcome.txt  RESULTS-a0-asan-cert-2026-06-12.txt  RESULTS-a05-flavor-guard-2026-06-12.txt  RESULTS-a1-mutation-2026-06-12.txt  RESULTS-a2-mutation-2026-06-12.txt  RESULTS-a2fix-2026-06-12.txt  RESULTS-a2fix-mutation-2026-06-12.txt  RESULTS-a2fixb-2026-06-12.txt  RESULTS-a3-mutation-2026-06-12.txt  RESULTS-a4-demo-tls-2026-06-12.txt  RESULTS-asan-2026-06-09.txt  RESULTS-asan-2026-06-10-M4.txt  RESULTS-asan-2026-06-10-chaos-v2.txt  RESULTS-asan-2026-06-10-chaos.txt  RESULTS-asan-2026-06-10-hostile-fixes.txt  RESULTS-asan-2026-06-10-hostile-fu.txt  RESULTS-asan-2026-06-11-h2fu.txt  RESULTS-asan-2026-06-11-h3.txt  RESULTS-asan-2026-06-12-c.txt  RESULTS-asan-2026-06-15-phaseA.txt  RESULTS-asan-2026-06-17-selectable-logs.txt  RESULTS-asan-2026-06-18-metrics-correctness.txt  RESULTS-asan-2026-06-20-code-review.txt  RESULTS-asan-2026-06-23-dropin.txt  RESULTS-asan-2026-06-24-exporter-core.txt  RESULTS-asan-2026-06-24-simplify2.txt  RESULTS-asan-validation-2026-06-09.txt  RESULTS-b1-mutation-2026-06-12.txt  RESULTS-b4-heartbeat-mutation-2026-06-12.txt  RESULTS-c1-bindings-2026-06-12.txt  RESULTS-c2-mutation-2026-06-12.txt  RESULTS-c2-nossl-fix-2026-06-12.txt  RESULTS-c3-mutation-2026-06-12.txt  RESULTS-h3f10-clang-record-layouts-2026-06-11.txt  RESULTS-instance-id-2026-06-04.txt  RESULTS-r32-rootstart-2026-06-06.txt  RESULTS-soak-2026-06-07-allfeatures-grpc.txt  RESULTS-tsan-2026-06-04.txt  (+35 more)
tests/bench/: RESULTS-hour-comparison-2026-06-10.md  RESULTS-regression-metrics-correctness-2026-06-19.md  RESULTS-span-saturation-2026-06-09.md  RESULTS-weekend-tls-chaos-2026-06-15.md  RESULTS.md  analyse.sh  analyse_logs.sh  mix.lua  nginx_c1.conf  nginx_c2.conf  nginx_c3.conf  nginx_logs_bl.conf  nginx_logs_ta.conf  nginx_logs_tb.conf  nginx_logs_tc.conf  nginx_logs_td.conf  saturation.sh  saturation_accesslog.sh  soak.sh  soak_grpc.conf  timer_panic_watch.sh  zero_cost.sh  zero_cost_logs.sh
tests/bench/results/: logs_bench_20260603_123815.txt  logs_bench_20260604_141316.txt  logs_bench_20260604_153839.txt  logs_bench_20260605_155517.txt  run-2026-05-22T14-00-37.json  run-2026-05-28T13-24-18.json  run-2026-05-28T13-40-33.json  run-2026-05-28T18-30-57.json  run-2026-05-28T19-51-39.json  run-2026-05-28T20-26-42.json  run-2026-05-28T20-52-01.json  run-2026-05-28T21-15-24.json  run-2026-05-28T23-02-12.json  run-2026-05-29T18-02-38.json  run-2026-05-29T18-05-06.json  run-2026-05-29T18-06-21.json  run-2026-05-29T18-41-47.json  run-2026-06-03T13-28-13.json  run-2026-06-03T13-38-41.json  run-2026-06-03T13-55-55.json  run-2026-06-03T16-21-01.json
tests/integration/: dns_stub.py  header_echo_stub.py  nginx.conf  nginx_access_log.conf  nginx_b3_bad_endpoint.conf  nginx_b4_heartbeat_alive.conf  nginx_b4_heartbeat_dead.conf  nginx_cpp_dropin.conf  nginx_daemon_on.conf  nginx_dualstack_dns.conf  nginx_dualstack_dns_aaaa.conf  nginx_dualstack_nxdomain.conf  nginx_dualstack_v6.conf  nginx_error_log.conf  nginx_error_log_stage_e.conf  nginx_exporter.conf  nginx_h2f5_warn.conf  nginx_heartbeat.conf  nginx_high_rps.conf  nginx_log_policy.conf  nginx_metrics_off_traces.conf  nginx_realip_address_split.conf  nginx_redirect_safe.conf  nginx_spike_dedworker.conf.tmpl  nginx_spike_dualrole.conf.tmpl  nginx_traces.conf  nginx_worker_processes_after_http.conf  nginx_wp_after_http_under_ncpu.conf  programmable_collector_stub.py  run.sh  run_a1_worker_order.sh  run_a3_mutation.sh  run_a3_tls_e2e.sh  run_access_log.sh  run_b1_collector_cert_gauge.sh  run_b1_spsc_reload_chaos.sh  run_b2_orphan.sh  run_b3_quit_hang.sh  run_b4_daemon_on_gen1.sh  run_b4_heartbeat_stale.sh  (+34 more)
tests/support/: mod.rs
