[package]
name = "ngx-otel-rust"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = "1.81.0"

[lib]
name = "ngx_http_otel_module"
# rlib is included so that integration tests in tests/ can link against the
# library.  cdylib is the NGINX loadable module output.
crate-type = ["cdylib", "rlib"]

[dependencies]
bytes = "1.10.1"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", default-features = false, features = ["client", "http1", "http2"] }
libc = "0.2.174"
# Pinned to the local `../ngx-rust` checkout on branch
# `ngx-otel-rust-deadlock-fix` (commit on top of upstream 13c0067) which
# patches `src/async_/spawn.rs::schedule` to always defer wakes via
# `ngx_post_event` instead of synchronously re-polling.  See the commit
# message there for the full deadlock analysis.  Upstream PR pending.
nginx-sys = { path = "../ngx-rust/nginx-sys" }
ngx = { path = "../ngx-rust", features = ["async", "std"] }
openssl-sys = { version = "0.9.110", features = ["bindgen"] }
pin-project-lite = "0.2.16"
prost = "0.13"
thiserror = { version = "2.0.12", default-features = false }
tonic = { version = "0.14", default-features = false }
tower-service = "0.3"

[build-dependencies]
prost-build = "0.13"
tonic-build = { version = "0.14", default-features = false }

[features]
default = ["export-modules"]
# Generate `ngx_modules` table with module exports
# The exports table is required for building loadable modules with --crate-type cdylib
# outside of the NGINX buildsystem.
export-modules = []
# Expose test-only types (SpinConnector, SpinTcpIo, etc.) so external crates can
# exercise transport logic without a live NGINX process.  Never enable in production.
test-support = []

# Integration tests that exercise HyperHttpTransport via SpinConnector require
# the test-support feature to expose the Spin* types and HyperHttpTransport::new.
# Run them with: cargo test --features test-support [--test <name>] [-- --ignored]
[[test]]
name = "transport_errors"
path = "tests/transport_errors.rs"
required-features = ["test-support"]

[[test]]
name = "transport_integration"
path = "tests/transport_integration.rs"
required-features = ["test-support"]

[[test]]
name = "grpc_smoke"
path = "tests/grpc_smoke.rs"
required-features = ["test-support"]

[profile.release]
codegen-units = 1
lto = true
