[package]
name = "ngx-otel-rust"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = "1.85.0"

# Every `unsafe` block must carry a `// SAFETY:` comment stating its invariant.
# Enforced after a full documentation pass (2026-06-06, 309 blocks); this keeps
# any newly-introduced `unsafe` honest. (A restriction lint, opted into here.)
[lints.clippy]
undocumented_unsafe_blocks = "deny"
# Prefer `&raw const/mut place` over `&place as *const/*mut T` — the latter forms
# a transient reference (an aliasing assertion) just to cast it away, which is a
# footgun at the FFI boundary. Enforced after the full conversion (2026-06-06).
borrow_as_ptr = "deny"

[lib]
name = "ngx_http_otel_module"
# rlib is included so that integration tests in tests/ can link against the
# library.  cdylib is the NGINX loadable module output.
crate-type = ["cdylib", "rlib"]

[dependencies]
bytes = "1.10.1"
# getrandom: one-shot OS-entropy seed for the per-thread ChaCha20 DRBG (D-1 fix).
# Already in the transitive dep tree (via tempfile); listed here as a direct dep
# to call getrandom::fill() from ctx.rs. No new crate added to the tree.
getrandom = { version = "0.4", default-features = false }
# rand_chacha + rand_core: ChaCha20-based CSPRNG for trace/span ID generation
# (D-1 fix). Seeded once per worker thread from getrandom (cold path); zero
# per-request syscalls thereafter.
# rand_chacha 0.10 + rand_core 0.10 + ppv-lite86 0.2: all MIT OR Apache-2.0,
# MSRV 1.85 (matches ours). No duplicate getrandom (0.4 already in tree).
rand_chacha = { version = "0.10", default-features = false }
rand_core = { version = "0.10", default-features = false }
# futures-channel: provides mpsc channel for fire_one_bidi_stream's outbound
# stream.  Already present transitively via tonic/h2; listed here so
# `futures_channel` is accessible as a first-class module path in smoke.rs.
futures-channel = "0.3"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", default-features = false, features = ["client", "http1", "http2"] }
libc = "0.2.174"
# Pinned to the local `../ngx-rust` checkout on branch
# `ngx-otel-rust-deadlock-fix` (commit on top of upstream 13c0067) which
# patches `src/async_/spawn.rs::schedule` to always defer wakes via
# `ngx_post_event` instead of synchronously re-polling.  See the commit
# message there for the full deadlock analysis.  Upstream PR pending.
nginx-sys = { path = "../ngx-rust/nginx-sys" }
ngx = { path = "../ngx-rust", features = ["async", "std"] }
openssl-sys = { version = "0.9.110", features = ["bindgen"] }
pin-project-lite = "0.2.16"
prost = "0.14"
# serde_json: used by the Processor trait's `from_config(&serde_json::Value)` API
# (Phase 3.6).  The crate is no_std + `extern crate std`, so std-backed crates work.
serde_json = "1"
thiserror = { version = "2.0.12", default-features = false }
tonic = { version = "0.14", default-features = false, features = ["codegen"] }
tonic-prost = { version = "0.14", default-features = false }
tower-service = "0.3"

[build-dependencies]
tonic-prost-build = { version = "0.14", default-features = false }

[features]
default = ["export-modules"]
# Generate `ngx_modules` table with module exports
# The exports table is required for building loadable modules with --crate-type cdylib
# outside of the NGINX buildsystem.
export-modules = []
# Expose test-only types (SpinConnector, SpinTcpIo, etc.) so external crates can
# exercise transport logic without a live NGINX process.  Never enable in production.
test-support = []

# Integration tests that exercise HyperHttpTransport via SpinConnector require
# the test-support feature to expose the Spin* types and HyperHttpTransport::new.
# Run them with: cargo test --features test-support [--test <name>] [-- --ignored]
[[test]]
name = "transport_errors"
path = "tests/transport_errors.rs"
required-features = ["test-support"]

[[test]]
name = "transport_integration"
path = "tests/transport_integration.rs"
required-features = ["test-support"]

[[test]]
name = "grpc_smoke"
path = "tests/grpc_smoke.rs"
required-features = ["test-support"]

[dev-dependencies]
# Test-only echo server for Phase 1.2 Item 2 bidi smoke.  Dev-deps do NOT
# propagate into release builds of the module dylib; `cargo tree --edges normal`
# must show no tokio at the crate root.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
# tokio-stream: needed for ReceiverStream in examples/bidi_echo_server.rs.
# Already a transitive dep via tonic; made explicit here for the example.
tokio-stream = { version = "0.1", features = ["net"] }
# tonic server feature (for EchoServer trait impl in examples/bidi_echo_server.rs)
# The existing tonic under [dependencies] already covers the client side.
tonic = { version = "0.14", default-features = false, features = ["server", "transport", "router"] }

[profile.release]
codegen-units = 1
lto = true
